# tipopac

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.claude/agents/: implementer.md
design/: design.md  independent_tau_fit.md  initial_design.md  model_refactor.md  sigma_tsys_derivation.md  tour.md
old_context/: initial_design.md  model_refactor.md  performance_refactor_considerations.md  sigma_tsys_derivation.md  todo.md
references/: ms_v2_memo_229.html
run/: run_altair_plots.py
src/tipopac/: __init__.py  anchor.py  api.py  atmgrid.py  atmosphere.py  bands.py  caltables.py  fit.py  flags.py  geometry.py  physics.py  plot.py  schema.py  summary.py  timeutils.py  weblog.py
src/tipopac/readers/: __init__.py  base.py  ms.py  sdm.py
tests/integration/: run_legacy.py  test_full_pipeline.py
tests/integration/reference/v26/global_tau/: casalog.txt  reference.json
tests/integration/reference/v26/tau_per_antenna/: casalog.txt  reference.json
tests/integration/reference/v26/tcal_solve/: casalog.txt  reference.json
tests/synth/: test_low_leverage.py  test_recovery.py
tests/unit/: test_anchor.py  test_api.py  test_atmgrid.py  test_atmosphere.py  test_bands.py  test_caltables.py  test_fit.py  test_flags.py  test_ms_reader.py  test_physics.py  test_plot.py  test_schema.py  test_sdm_reader.py  test_summary.py  test_weblog.py  test_writers.py
tipopac_v2.6/lastversion/tipping/: tipopac.py
tipopac_v2.6/lastversion/tipping/gotasks/: tipopac.py
tipopac_v2.6/lastversion/tipping/private/: task_tipopac.py
(+13 files in other folders)
