[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tipopac"]

[project]
name = "tipopac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair[all]>=6.2.1",
    "amwrap",
    "casatools>=6.7.5.18",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.3",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
    "sdmpy>=1.71.2",
    "xarray>=2024.10",
]

[tool.uv.sources]
amwrap = { git = "https://github.com/autocorr/amwrap" }

[dependency-groups]
dev = [
    "fastparquet>=2026.5.0",
    "ipdb>=0.13.13",
    "ipython>=9.13.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.35",
    "zensical>=0.0.45",
]

[tool.ruff]
extend-exclude = ["tipopac_v2.6", "amwrap", "data", ".venv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not slow and not network'"
markers = [
    "slow: integration tests requiring data/tip_test.ms",
    "network: tests exercising the live open-meteo endpoint",
]
